<resources>
    <string name="app_name">ArcheryGame</string>

    <string name="task_blind">kurze Scheibe: 3 Versuche</string>
    <string name="task_ratte">Ratte treffen: 2 Versuche</string>
    <string name="task_duell">lange Scheibe: 2 Versuche</string>
    <string name="task_wasserballon">Mit Ansage: 2 Versuche</string>
    <string name="task_gold">lange Scheibe: 2 Versuche</string>
    <string name="secondTeam">Zweites Team</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="add">Hinzufügen</string>
    <string name="cancel">Abbrechen</string>
    <string name="insert_player">Spieler hinzufügen</string>
    <string name="player_name">Spielername</string>
</resources>
